Fix /api/scan: use sequential analysis to avoid Angel One auth race
Parallel session refresh is not thread-safe — concurrent re-auth attempts
corrupt the JWT token causing most stocks to fail instantly. Sequential
processing guarantees one clean re-auth that all subsequent calls reuse.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>